--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,5 @@
 MONGO_URI = "mongodb+srv://satishmaurya2257:62kT7AT3DiDSxSYD@dineshportfolio.ovzqc.mongodb.net/?retryWrites=true&w=majority&appName=dineshPortfolio"
 PORT = 5000
+CLOUDINARY_CLOUD_NAME ="dq3wpbpjq"
+CLOUDINARY_API_KEY = "535878531821961"
+CLOUDINARY_API_SECRET = "KyBBg8ZJOFVR94FSB3MZrh_xvh0"
