--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3",
+    "recharts": "^2.15.1",
     "sweetalert2": "^11.16.0"
   },
   "devDependencies": {
