refresh, acess token setup

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,5 @@ PORT = 5000
 CLOUDINARY_CLOUD_NAME ="dq3wpbpjq"
 CLOUDINARY_API_KEY = "535878531821961"
 CLOUDINARY_API_SECRET = "KyBBg8ZJOFVR94FSB3MZrh_xvh0"
+JWT_SECRET = "ajdncuwedb29598341hhbcdjcbt2332"
+JWT_REFRESH_SECRET = "xbchjcqwpe46891327gfqb67b623vrt7"
