axios instances and login setup

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
 REACT_APP_CLOUDINARY_URL=cloudinary://535878531821961:KyBBg8ZJOFVR94FSB3MZrh_xvh0@dq3wpbpjq
+VITE_APP_BASE_URL= "http://localhost:5000/api"
